# cusp-fi

./: .dockerignore  .env.example  .env.production  .gitignore  .pnp.cjs  Anchor.toml  Dockerfile  README.md  architecture.md  eslint.config.js  index.html  nixpacks.toml  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
api/dflow/: [...path].ts
api/dflow-trade/: [...path].ts
coming-soon/: .env.example  README.md  index.html  package.json
coming-soon/src/: App.css  App.tsx  index.css
docs/: CUSP_ANALYSIS_AND_E2E_ROADMAP.md  CUSP_CURRENT_SITUATION_RESEARCH_2026-03-26.md  CUSP_CURRENT_STATE_AND_E2E_PLAN.md  CUSP_V1_1_ARCHITECTURE_ADR.md  DFLOW_API_INTEGRATION.md  DFLOW_DATA_AUDIT.md  supabase-waitlist-schema.sql
docs/diagrams/: cusp-current-system-map.excalidraw  cusp-readiness-gaps.excalidraw
programs/: Cargo.toml
programs/cusp-earn-vault/: Cargo.toml  Xargo.toml
programs/cusp-leverage/: Cargo.toml
programs/cusp-vault/: Cargo.toml
programs/cusp-vault/src/: lib.rs
public/: overview.html
scripts/: deploy-earn-vault.sh  faucet.ts  init-earn-vault.ts  init-v1-1-devnet.ts  init-vault.ts  setup-devnet.ts  setup-vault.ts
src/: App.tsx  index.css  vite-env.d.ts
src/components/: APYBreakdown.tsx  AccessGate.tsx  BorrowPanel.tsx  CountdownTimer.tsx  DepositWithdrawPanel.tsx  Footer.tsx  HealthGauge.tsx  InviteGate.tsx  Layout.tsx  LoanCard.tsx  MarketCard.tsx  MarketDetailModal.tsx  MarketOutcomeTable.tsx  MarketTradePanel.tsx  MarketsCategorySidebar.tsx  MarketsTable.tsx  Navbar.tsx  (+4 more)
(+79 files in other folders)
