[package]
name = "cusp-vault"
version = "0.1.0"
description = "Cusp Vault: deposit USDC, mint cUSDC shares, withdraw with yield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cusp_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
